src/other/mico-2.3.12/test/idl/error/expected-stderr-case13.idl
case13.idl:13: 'C' is not member of enum '::E'
